# HowlingWind

./: .gitignore  update.json
docs/: balance-patches.md  dolphin-fork-plan.md  dolphin-sync-research.md  gnt4-iso-hack-plan.md  netplay-debug-notes.md  rollback-architecture.md  rollback-on-netplay-plan.md
launcher/: index.html  package-lock.json  package.json  tsconfig.json
launcher/.claude/: launch.json
launcher/src/: App.svelte  DebugWindow.svelte  app.css  main.ts
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/src/: diagnostics.rs  dolphin_mem.rs  hw_ipc.rs  lib.rs  main.rs  netplay.rs  rollback.rs  rollback_ipc.rs  stun.rs  updater.rs
launcher/src/lib/: ControllerMapper.svelte  MatchResults.svelte  Sidebar.svelte  VoiceChat.svelte  audio.ts  firebase.ts
launcher/src/routes/: DebugPlay.svelte  Leaderboard.svelte  MainMenu.svelte  PlayOnline.svelte  Practice.svelte  RollbackTest.svelte  Settings.svelte
traversal-server/: package.json
